started manager UI

--- a/password-manager/static/css/landing-page.css
+++ b/password-manager/static/css/landing-page.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, serif;
     text-align: center;
-    background: lightblue url("/static/images/boardwalk.jpg") no-repeat center center fixed;
+    background: url("/static/images/boardwalk.jpg") no-repeat center center fixed;
     -moz-background-size: cover;
     -webkit-background-size: cover;
     -o-background-size: cover;
