--- a/password-manager/static/css/signup-page.css
+++ b/password-manager/static/css/signup-page.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, serif;
-    background: lightblue url("/static/images/boardwalk.jpg") no-repeat center center fixed;
+    background: url("/static/images/boardwalk.jpg") no-repeat center center fixed;
     -moz-background-size: cover;
     -webkit-background-size: cover;
     -o-background-size: cover;
@@ -12,7 +12,6 @@ body {
 }
 .signup .form-container {
     font-size: 20px;
-    width: 480px;
     text-align: right;
     display: inline-block;
 }
