--- a/password-manager/templates/manager.html
+++ b/password-manager/templates/manager.html
@@ -2,12 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>BoardLock - Password Manager</title>
     <link rel="stylesheet" href="/static/css/manager.css">
 </head>
 <body>
-<p>Welcome {{username}}, here is your data: {{data}}</p>
+<p id="username">{{username}}</p>
+<p id="data">{{data}}</p>
+<h1>BoardLock Password Manager</h1>
 <a id="logout" class="button" style="text-decoration: none">Logout</a>
-<script>document.getElementById('logout').href = '{{link}}/logout';</script>
+<table id="data_table">
+    <colgroup>
+        <col class="wide" />
+        <col class="wide" />
+        <col class="wide" />
+        <col class="narrow" />
+        <col class="narrow" />
+    </colgroup>
+    <tr>
+        <th>Username</th>
+        <th>Password</th>
+        <th>URL</th>
+        <th>Category</th>
+        <th>Time Created</th>
+    </tr>
+</table>
+<script>
+    document.getElementById('logout').href = '{{link}}/logout';
+    let username = document.getElementById('username').innerHTML; // pass variables to manager.js
+    let data = document.getElementById('data').innerHTML;
+</script>
+<script src="/static/js/manager.js"></script>
 </body>
 </html>
