requirement-container fix

--- a/password-manager/static/css/password-generator.css
+++ b/password-manager/static/css/password-generator.css
@@ -34,5 +34,5 @@
     border-style: solid;
     font-family: Arial, serif;
     font-size: 12px;
-    padding: 5px 0 .1px 0;
+    padding: 5px 3px .1px 3px;
 }
