--- a/password-manager/templates/manager.html
+++ b/password-manager/templates/manager.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>BoardLock - Password Manager</title>
     <link rel="stylesheet" href="/static/css/manager.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
 <p id="username">{{username}}</p>
@@ -22,7 +23,7 @@
         </div>
         <div style="float: right">
             <button id="export" class="long" style="text-decoration: none">Export Database</button>
-            <button id="change_psw" class="long" style="text-decoration: none">Change Password</button>
+            <button id="change_psw" class="long" style="text-decoration: none">Change Root Password</button>
             <a id="logout" class="button" style="text-decoration: none">Logout</a>
         </div>
     </div>
