--- a/password-manager/static/css/manager.css
+++ b/password-manager/static/css/manager.css
@@ -11,7 +11,7 @@ h1 {
     color: white;
     width: max-content;
     padding-left: 10px;
-    text-shadow: 3px 3px #7b757c;
+    text-shadow: 3px 3px #505852;
 }
 a, button {
     font-family: Arial, serif;
@@ -26,6 +26,9 @@ a, button {
 }
 a:hover, button:hover {
     opacity: .8;
+}
+button:disabled {
+    opacity: .5;
 }
 .ui {
     width: 80%;
@@ -67,11 +70,8 @@ td, th {
   padding: 8px;
 }
 
-tr:nth-child(even) {
+.unselected {
     background-color: rgba(255, 255, 255, .80);
-}
-tr:nth-child(odd) {
-    background-color: rgba(220, 220, 220, .80);
 }
 th {
   padding-top: 8px;
@@ -79,4 +79,12 @@ th {
   text-align: center;
   background-color: rgba(0, 160, 0, 1);
   color: white;
+}
+tr:hover {
+    background-color: rgba(0, 160, 0, 1);
+    color: white;
+}
+.selected {
+    background-color: rgba(0, 160, 0, 1);
+    color: white;
 }
