--- a/password-manager/static/css/password-generator.css
+++ b/password-manager/static/css/password-generator.css
@@ -27,12 +27,13 @@
     bottom: 1px;
 }
 .wrapper {
-    background: white;
-    border-color: rgba(0,160,0,1);
-    border-radius: 10px;
-    border-width: 3px;
-    border-style: solid;
     font-family: Arial, serif;
     font-size: 12px;
     padding: 5px 3px .1px 3px;
+}
+.wrapper label {
+    background-color: rgba(255, 255, 255, .8);
+    padding: 2px;
+    position: relative;
+    bottom: 1px;
 }
