--- a/password-manager/templates/manager.html
+++ b/password-manager/templates/manager.html
@@ -13,18 +13,18 @@
 <div class="ui">
     <div class="top-bar">
         <div>
-            <button id="create" class="long" style="text-decoration: none">Create New Entry</button>
-            <button id="edit" style="text-decoration: none">Edit</button>
-            <button id="delete" style="text-decoration: none">Delete</button>
+            <button id="create">Create New Entry</button>
+            <button id="edit">Edit</button>
+            <button id="delete">Delete</button>
         </div>
         <div class="searchbar">
             <label for="search">Search Database: </label>
             <input id="search" type="search">
         </div>
         <div style="float: right">
-            <button id="export" class="long" style="text-decoration: none">Export Database</button>
-            <button id="change_psw" class="long" style="text-decoration: none">Change Root Password</button>
-            <a id="logout" class="button" style="text-decoration: none">Logout</a>
+            <button id="export">Export Database</button>
+            <button id="change_psw">Change Root Password</button>
+            <a id="logout" class="button" style="text-decoration: none;">Logout</a>
         </div>
     </div>
     <table id="data_table">
