--- a/password-manager/static/css/password-generator.css
+++ b/password-manager/static/css/password-generator.css
@@ -12,10 +12,10 @@
     font-family: Arial, serif;
 }
 .active {
-    background: #858585;
+    background: #6c6c6c;
     -webkit-box-shadow: inset 0px 0px 40px #9a9a9a;
     -moz-box-shadow: inset 0px 0px 40px #9a9a9a;
-    box-shadow: inset 0px 0px 40px #9a9a9a;
+    box-shadow: inset 0px 0px 40px #2a2a2a;
 }
 .wrapper .show-random {
     display: inline-block;
@@ -24,12 +24,12 @@
     cursor: pointer;
     border: none;
     position: relative;
-    bottom: 1px;
 }
 .wrapper {
     font-family: Arial, serif;
     font-size: 12px;
     padding: 5px 3px .1px 3px;
+    text-align: center;
 }
 .wrapper label {
     background-color: rgba(255, 255, 255, .8);
