--- a/password-manager/templates/manager.html
+++ b/password-manager/templates/manager.html
@@ -5,15 +5,21 @@
     <title>BoardLock - Password Manager</title>
     <link rel="stylesheet" href="/static/css/manager.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+        $(function(){
+            $("#password-generator").load("{{link}}/static/html/password-generator.html");
+        });
+    </script>
 </head>
 <body>
 <p id="username">{{username}}</p>
 <p id="data">{{data}}</p>
 <h1>BoardLock Password Manager</h1>
-<div class="ui">
+<h1 style="position: absolute; right: 20px; top: 0">Welcome, {{username}}</h1>
+<div class="ui" id="ui">
     <div class="top-bar">
         <div>
-            <button id="create">Create New Entry</button>
+            <button id="create" onclick="create('')">Create New Entry</button>
             <button id="edit">Edit</button>
             <button id="delete">Delete</button>
         </div>
@@ -44,11 +50,47 @@
         </tr>
     </table>
 </div>
+<div id="editor_and_passgen" class="hide">
+    <form id="entry_form">
+        <div class="field">
+            <label for="username_field">Username:</label>
+            <input id="username_field" type="text" required>
+        </div>
+        <div class="field">
+            <label for="password_field">Password:</label>
+            <input id="password_field" type="password" required>
+            <button class="show" type="button" onclick="show_password(document.getElementById('password_field'), this)">Show</button>
+        </div>
+        <div class="field">
+            <label for="url_field">URL:</label>
+            <input id="url_field" type="text">
+        </div>
+        <div class="field" style="text-align: center">
+            <label for="category_field">Category:</label>
+            <select id="category_field">
+                <option selected="selected"></option>
+                <option>Work</option>
+                <option>Email</option>
+                <option>Social Media</option>
+                <option>Shopping</option>
+                <option>Gaming</option>
+                <option>Entertainment</option>
+                <option>Other</option>
+            </select>
+        </div>
+    </form>
+    <div class="buttons">
+        <button id="cancel" onclick="close_editor()">Cancel</button>
+        <button style="background-color: transparent"></button>
+        <button id="save" style="padding: 10px 18px">Save</button>
+    </div>
+    <div id="password-generator"></div>
+</div>
+</body>
 <script>
     document.getElementById('logout').href = '{{link}}/logout';
     let username = document.getElementById('username').innerHTML; // pass variables to manager.js
     let data = document.getElementById('data').innerHTML;
 </script>
 <script src="/static/js/manager.js"></script>
-</body>
 </html>
