--- a/password-manager/static/css/manager.css
+++ b/password-manager/static/css/manager.css
@@ -57,7 +57,8 @@ table {
 }
 .blurry {
     color: transparent;
-    text-shadow: 0 0 5px rgba(0,0,0,0.5);
+    text-shadow: 0 0 7px rgba(0,0,0,0.7);
+
 }
 .blurry:hover {
     color: inherit;
@@ -159,4 +160,12 @@ th {
     border: none;
     position: absolute;
     margin-left: 3px;
+}
+#editor_and_passgen h1 {
+    text-shadow: none;
+    font-size: 20px;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
+    top: 5%;
 }
