--- a/password-manager/templates/manager.html
+++ b/password-manager/templates/manager.html
@@ -19,13 +19,13 @@
 <div class="ui" id="ui">
     <div class="top-bar">
         <div>
-            <button id="create" onclick="create('')">Create New Entry</button>
-            <button id="edit">Edit</button>
+            <button id="create" onclick="create()">Create New Entry</button>
+            <button id="edit" onclick="edit()">Edit</button>
             <button id="delete">Delete</button>
         </div>
         <div class="searchbar">
             <label for="search">Search Database: </label>
-            <input id="search" type="search">
+            <input id="search" type="text" readonly="readonly" onfocus="this.removeAttribute('readonly');">
         </div>
         <div style="float: right">
             <button id="export">Export Database</button>
@@ -35,6 +35,7 @@
     </div>
     <table id="data_table">
         <colgroup>
+            <col class="narrow" />
             <col class="wide" />
             <col class="wide" />
             <col class="wide" />
@@ -42,6 +43,7 @@
             <col class="narrow" />
         </colgroup>
         <tr>
+            <th>Title</th>
             <th>Username</th>
             <th>Password</th>
             <th>URL</th>
@@ -51,14 +53,20 @@
     </table>
 </div>
 <div id="editor_and_passgen" class="hide">
-    <form id="entry_form">
+    <h1 id="action"></h1>
+    <form id="entry_form" method="POST">
+        <input id="change_type" style="display: none" name="change_type" value="">
+        <div class="field">
+            <label for="title_field">Title:</label>
+            <input id="title_field" type="text">
+        </div>
         <div class="field">
             <label for="username_field">Username:</label>
             <input id="username_field" type="text" required>
         </div>
         <div class="field">
             <label for="password_field">Password:</label>
-            <input id="password_field" type="password" required>
+            <input id="password_field" type="text">
             <button class="show" type="button" onclick="show_password(document.getElementById('password_field'), this)">Show</button>
         </div>
         <div class="field">
@@ -71,6 +79,8 @@
                 <option selected="selected"></option>
                 <option>Work</option>
                 <option>Email</option>
+                <option>Finance</option>
+                <option>Health</option>
                 <option>Social Media</option>
                 <option>Shopping</option>
                 <option>Gaming</option>
@@ -82,15 +92,21 @@
     <div class="buttons">
         <button id="cancel" onclick="close_editor()">Cancel</button>
         <button style="background-color: transparent"></button>
-        <button id="save" style="padding: 10px 18px">Save</button>
+        <button id="save" type="submit" form="entry_form" onsubmit="save_data()" style="padding: 10px 18px">Save</button>
     </div>
     <div id="password-generator"></div>
 </div>
 </body>
 <script>
+    $('input').attr('autocomplete', 'new-password');
+</script>
+<script>
     document.getElementById('logout').href = '{{link}}/logout';
     let username = document.getElementById('username').innerHTML; // pass variables to manager.js
     let data = document.getElementById('data').innerHTML;
+    document.getElementById('password_field').type = "password";
 </script>
 <script src="/static/js/manager.js"></script>
 </html>
+
+<! https://stackoverflow.com/questions/60689757/how-to-disable-chrome-autofill-after-2020 >
