--- a/password-manager/static/css/landing-page.css
+++ b/password-manager/static/css/landing-page.css
@@ -60,7 +60,7 @@ a:hover, button:hover {
     text-decoration: none;
     left: 1%;
     top: 1%;
-    width: 10%;
+    width: 120px;
     padding: 10px 10px;
     font-size: 16px;
 }
