--- a/password-manager/static/css/manager.css
+++ b/password-manager/static/css/manager.css
@@ -180,3 +180,32 @@ th {
     transform: translate(-50%, 0);
     bottom: 15%;
 }
+#delete_prompt {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 300px;
+    height: 150px;
+    background-color: rgba(40, 40, 40, .8);
+    border: rgb(0, 160, 0);
+    border-width: 5px;
+    border-style: outset;
+    text-align: center;
+    font-size: 18px;
+    color: white;
+    font-family: Arial, serif;
+}
+.overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 10000
+}
+.extender {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+}
