--- a/password-manager/templates/manager.html
+++ b/password-manager/templates/manager.html
@@ -28,7 +28,7 @@
             <input id="search" type="text" readonly="readonly" onfocus="this.removeAttribute('readonly');">
         </div>
         <div style="float: right">
-            <button id="export">Export Database</button>
+            <a id="export" onclick="export_database()" style="text-decoration: none">Export Database</a>
             <button id="change_psw">Change Root Password</button>
             <a id="logout" class="button" style="text-decoration: none;">Logout</a>
         </div>
