--- a/password-manager/static/css/manager.css
+++ b/password-manager/static/css/manager.css
@@ -45,6 +45,10 @@ button:disabled {
     padding: 9px;
     vertical-align: top;
 }
+.searchbar input {
+    color: gray;
+    text-align: center
+}
 table {
     margin: 0 auto;
     text-align: left;
