--- a/password-manager/templates/manager.html
+++ b/password-manager/templates/manager.html
@@ -25,11 +25,11 @@
         </div>
         <div class="searchbar">
             <label for="search">Search Database: </label>
-            <input id="search" type="text" readonly="readonly" onfocus="this.removeAttribute('readonly');">
+            <input id="search" value="In development" type="text" readonly="readonly" onfocus="this.removeAttribute('readonly');">
         </div>
         <div style="float: right">
             <a id="export" onclick="export_database()" style="text-decoration: none">Export Database</a>
-            <button id="change_psw">Change Root Password</button>
+            <a id="change_psw" href="{{link}}/change-root" style="text-decoration: none">Change Root Password</a>
             <a id="logout" class="button" style="text-decoration: none;">Logout</a>
         </div>
     </div>
