landing-page msg

--- a/password-manager/templates/landing-page.html
+++ b/password-manager/templates/landing-page.html
@@ -12,7 +12,8 @@
 <div class="text-container">
     <p style="font-size: 30px; font-weight: bold">Welcome to BoardLock!</p>
     <p style="font-size: 20px">A secure online password storage solution.</p>
-    <p style="font-size: 15px; padding-top: 5px">(Please do not store real login information, this is a personal project using personal servers.)</p>
+    <p style="font-size: 15px; padding-top: 5px">Please do not store real login information, this is a personal project using personal servers.</p>
+<p style="font-size: 15px; padding-top:5px"> Decline your browser's built-in password autofill system when using this application.</p> 
 </div>
 <div class="form-container">
     <div class="error">
