js file conflict, ui photo

--- a/password-manager/templates/change_root.html
+++ b/password-manager/templates/change_root.html
@@ -20,8 +20,8 @@
         <div class="form-container">
             <form id="credentials" method="POST">
                 <div>
-                    <label for="old">Old Password: </label>
-                    <input id="old" type="password" name="old" oninput="validation()" required>
+                    <label for="username">Old Password: </label>
+                    <input id="username" type="password" name="old" oninput="validation()" required>
                 </div>
                 <div>
                     <label for="psw">New Password: </label>
