--- a/templates/landing-page.html
+++ b/templates/landing-page.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>BoardLock</title>
+    <title>BoardLock Password Manager</title>
     <link rel="stylesheet" href="/static/css/landing-page.css">
 </head>
 
